--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,13 @@
   </div>
 </div>
 
+
+<div id="toasts" class="toasts"></div>
+<button id="chatFloat" class="chat-float hidden">New</button>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="/client.js?v=26"></script>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="/client.js"></script>
 </body>
